Shorter Ruin names

--- a/index.html
+++ b/index.html
@@ -573,22 +573,22 @@ title: Battle Facilities Calculator
 			</div>
 			<div class="btn-group">
 				<div class="left" title="Does this Pokemon have a Ruin ability?">
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsL" /><label class="btn btn-mid" style="border-top-left-radius:8px" for="ruinTabletsL">Tablets of Ruin</label>
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinVesselL" /><label class="btn btn-mid" style="border-top-right-radius:8px" for="ruinVesselL">Vessel of Ruin</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsL" /><label class="btn btn-mid" style="border-top-left-radius:8px" for="ruinTabletsL">Tablets</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinVesselL" /><label class="btn btn-mid" style="border-top-right-radius:8px" for="ruinVesselL">Vessel</label>
 				</div>
 				<div class="right" title="Does this Pokemon have a Ruin ability?">
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsR" /><label class="btn btn-mid" style="border-top-left-radius:8px" for="ruinTabletsR">Tablets of Ruin</label>
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinVesselR" /><label class="btn btn-mid" style="border-top-right-radius:8px" for="ruinVesselR">Vessel of Ruin</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsR" /><label class="btn btn-mid" style="border-top-left-radius:8px" for="ruinTabletsR">Tablets</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinVesselR" /><label class="btn btn-mid" style="border-top-right-radius:8px" for="ruinVesselR">Vessel</label>
 				</div>
 			</div>
 			<div class="btn-group">
 				<div class="left" title="Does this Pokemon have a Ruin ability?">
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinSwordL" /><label class="btn btn-mid" style="border-bottom-left-radius:8px" for="ruinSwordL">Sword of Ruin</label>
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsL" /><label class="btn btn-mid" style="border-bottom-right-radius:8px" for="ruinBeadsL">Beads of Ruin</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinSwordL" /><label class="btn btn-mid" style="border-bottom-left-radius:8px" for="ruinSwordL">Sword</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsL" /><label class="btn btn-mid" style="border-bottom-right-radius:8px" for="ruinBeadsL">Beads</label>
 				</div>
 				<div class="right" title="Does this Pokemon have a Ruin ability?">
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinSwordR" /><label class="btn btn-mid" style="border-bottom-left-radius:8px" for="ruinSwordR">Sword of Ruin</label>
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsR" /><label class="btn btn-mid" style="border-bottom-right-radius:8px" for="ruinBeadsR">Beads of Ruin</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinSwordR" /><label class="btn btn-mid" style="border-bottom-left-radius:8px" for="ruinSwordR">Sword</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsR" /><label class="btn btn-mid" style="border-bottom-right-radius:8px" for="ruinBeadsR">Beads</label>
 				</div>
 			</div>
 			<div class="btn-group">
