--- a/index.html
+++ b/index.html
@@ -573,22 +573,22 @@ title: Battle Facilities Calculator
 			</div>
 			<div class="btn-group">
 				<div class="left" title="Does this Pokemon have a Ruin ability?">
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsL" /><label class="btn btn-mid" style="border-top-left-radius:8px" for="ruinTabletsL">Tablets (-Atk)</label>
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinVesselL" /><label class="btn btn-mid" style="border-top-right-radius:8px" for="ruinVesselL">Vessel (-SpA)</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsL" /><label class="btn btn-mid btn-wide" style="border-top-left-radius:8px" for="ruinTabletsL">Tablets (-Atk)</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinVesselL" /><label class="btn btn-mid btn-wide" style="border-top-right-radius:8px" for="ruinVesselL">Vessel (-SpA)</label>
 				</div>
 				<div class="right" title="Does this Pokemon have a Ruin ability?">
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsR" /><label class="btn btn-mid" style="border-top-left-radius:8px" for="ruinTabletsR">Tablets (-Atk)</label>
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinVesselR" /><label class="btn btn-mid" style="border-top-right-radius:8px" for="ruinVesselR">Vessel (-SpA)</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsR" /><label class="btn btn-mid btn-wide" style="border-top-left-radius:8px" for="ruinTabletsR">Tablets (-Atk)</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinVesselR" /><label class="btn btn-mid btn-wide" style="border-top-right-radius:8px" for="ruinVesselR">Vessel (-SpA)</label>
 				</div>
 			</div>
 			<div class="btn-group">
 				<div class="left" title="Does this Pokemon have a Ruin ability?">
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinSwordL" /><label class="btn btn-mid" style="border-bottom-left-radius:8px" for="ruinSwordL">Sword (-Def)</label>
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsL" /><label class="btn btn-mid" style="border-bottom-right-radius:8px" for="ruinBeadsL">Beads (-SpD)</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinSwordL" /><label class="btn btn-mid btn-wide" style="border-bottom-left-radius:8px" for="ruinSwordL">Sword (-Def)</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsL" /><label class="btn btn-mid btn-wide" style="border-bottom-right-radius:8px" for="ruinBeadsL">Beads (-SpD)</label>
 				</div>
 				<div class="right" title="Does this Pokemon have a Ruin ability?">
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinSwordR" /><label class="btn btn-mid" style="border-bottom-left-radius:8px" for="ruinSwordR">Sword (-Def)</label>
-					<input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsR" /><label class="btn btn-mid" style="border-bottom-right-radius:8px" for="ruinBeadsR">Beads (-SpD)</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinSwordR" /><label class="btn btn-mid btn-wide" style="border-bottom-left-radius:8px" for="ruinSwordR">Sword (-Def)</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsR" /><label class="btn btn-mid btn-wide" style="border-bottom-right-radius:8px" for="ruinBeadsR">Beads (-SpD)</label>
 				</div>
 			</div>
 			<div class="btn-group">
