--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Battle Facilities Calculator
 	<div>
         <span class="title-text">Battle Facilities Damage Calculator</span>
         <span class="generation-select" title="Select the format.">
-            <!-- Gen 5: GBU, Gen 6: ORAS, Gen 7: USUM, Gen 8: SwSh, Gen 80: BDSP, Gen 20: Gen 7 BSS Factory, Gen 21: Inverse, Gen 22: LGPE -->
+            <!-- Gen 5: GBU, Gen 6: ORAS, Gen 7: USUM, Gen 8: SwSh, Gen 80: BDSP, Gen 9: SV, Gen 20: Gen 7 BSS Factory, Gen 21: Inverse, Gen 22: LGPE -->
             <input class="gen btn-input" type="radio" name="gen" value="5" id="gen5" /><label class="btn btn-small btn-left" for="gen5">BW</label>
             <input class="gen btn-input" type="radio" name="gen" value="6" id="gen6" /><label class="btn btn-small btn-mid" for="gen6">&Omega;R&alpha;S</label>
             <input class="gen btn-input" type="radio" name="gen" value="7" id="gen7" /><label class="btn btn-small btn-mid" for="gen7">USUM</label>
