Add Steely Spirit button and QOL

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -567,24 +567,24 @@ title: Battle Facilities Mass Calculator
                         <input class="btn-input calc-trigger" type="checkbox" id="lightScreenR" /><label class="btn btn-xwide btn-right" for="lightScreenR">Light Screen</label>
                     </div>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group gen-specific g9">
                     <div class="left" title="Does this Pokemon have a Ruin ability?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsL" /><label class="btn btn-mid" style="border-top-left-radius:8px" for="ruinTabletsL">Tablets of Ruin</label>
-                        <input class="btn-input calc-trigger" type="checkbox" id="ruinVesselL" /><label class="btn btn-mid" style="border-top-right-radius:8px" for="ruinVesselL">Vessel of Ruin</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsL" /><label class="btn btn-mid" style="border-top-left-radius:8px;width:6.5em" for="ruinTabletsL">Tablets (-Atk)</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="ruinVesselL" /><label class="btn btn-mid" style="border-top-right-radius:8px;width:6.5em" for="ruinVesselL">Vessel (-SpA)</label>
                     </div>
                     <div class="right" title="Does this Pokemon have a Ruin ability?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsR" /><label class="btn btn-mid" style="border-top-left-radius:8px" for="ruinTabletsR">Tablets of Ruin</label>
-                        <input class="btn-input calc-trigger" type="checkbox" id="ruinVesselR" /><label class="btn btn-mid" style="border-top-right-radius:8px" for="ruinVesselR">Vessel of Ruin</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="ruinTabletsR" /><label class="btn btn-mid" style="border-top-left-radius:8px;width:6.5em" for="ruinTabletsR">Tablets (-Atk)</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="ruinVesselR" /><label class="btn btn-mid" style="border-top-right-radius:8px;width:6.5em" for="ruinVesselR">Vessel (-SpA)</label>
                     </div>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group gen-specific g9">
                     <div class="left" title="Does this Pokemon have a Ruin ability?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="ruinSwordL" /><label class="btn btn-mid" style="border-bottom-left-radius:8px" for="ruinSwordL">Sword of Ruin</label>
-                        <input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsL" /><label class="btn btn-mid" style="border-bottom-right-radius:8px" for="ruinBeadsL">Beads of Ruin</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="ruinSwordL" /><label class="btn btn-mid" style="border-bottom-left-radius:8px;width:6.5em" for="ruinSwordL">Sword (-Def)</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsL" /><label class="btn btn-mid" style="border-bottom-right-radius:8px;width:6.5em" for="ruinBeadsL">Beads (-SpD)</label>
                     </div>
                     <div class="right" title="Does this Pokemon have a Ruin ability?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="ruinSwordR" /><label class="btn btn-mid" style="border-bottom-left-radius:8px" for="ruinSwordR">Sword of Ruin</label>
-                        <input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsR" /><label class="btn btn-mid" style="border-bottom-right-radius:8px" for="ruinBeadsR">Beads of Ruin</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="ruinSwordR" /><label class="btn btn-mid" style="border-bottom-left-radius:8px;width:6.5em" for="ruinSwordR">Sword (-Def)</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="ruinBeadsR" /><label class="btn btn-mid" style="border-bottom-right-radius:8px;width:6.5em" for="ruinBeadsR">Beads (-SpD)</label>
                     </div>
                 </div>
                 <div class="btn-group">
@@ -681,6 +681,14 @@ title: Battle Facilities Mass Calculator
                     </div>
                     <div class="right" title="Has this Pokemon had its Weakness Policy activated?">
                         <input class="btn-input calc-trigger" type="checkbox" id="wpR" /><label class="btn btn-xxwide" for="wpR"><img src="../_images/wp.png"><br>Weakness Policy</label>
+                    </div>
+                </div>
+                <div class="btn-group gen-specific g8 g9">
+                    <div class="left" title="Has this Pokemon's move been boosted by Steely Spirit?">
+                        <input class="btn-input calc-trigger" type="checkbox" id="steelySpiritL" /><label class="btn btn-xxwide" for="steelySpiritL">Steely Spirit</label>
+                    </div>
+                    <div class="right" title="Has this Pokemon's move been boosted by Steely Spirit?">
+                        <input class="btn-input calc-trigger" type="checkbox" id="steelySpiritR" /><label class="btn btn-xxwide" for="steelySpiritR">Steely Spirit</label>
                     </div>
                 </div>
                 <div class="gen-specific g9">
