--- a/honkalculate.html
+++ b/honkalculate.html
@@ -7,8 +7,8 @@ title: Battle Facilities Mass Calculator
         <span class="title-text">Battle Facilities Damage Calculator</span>
         <span class="generation-select" title="Select the format.">
             <!-- Gen 5: GBU, Gen 6: ORAS, Gen 7: USUM, Gen 8: SwSh, Gen 80: BDSP, Gen 20: Gen 7 BSS Factory, Gen 21: Inverse, Gen 22: LGPE -->
-            <input class="gen btn-input" type="radio" name="gen" value="3" id="gen3" /><label class="btn btn-small btn-left" for="gen3">RSE</label>
-            <input class="gen btn-input" type="radio" name="gen" value="4" id="gen4" /><label class="btn btn btn-mid" for="gen4">Gen 4</label>
+            <input class="gen btn-input" type="radio" name="gen" value="3" id="gen3" /><label class="btn btn-small btn-left" for="gen3">Em</label>
+            <input class="gen btn-input" type="radio" name="gen" value="4" id="gen4" /><label class="btn btn btn-mid" for="gen4">PtHGSS</label>
             <input class="gen btn-input" type="radio" name="gen" value="5" id="gen5" /><label class="btn btn-small btn-mid" for="gen5">BW</label>
             <input class="gen btn-input" type="radio" name="gen" value="6" id="gen6" /><label class="btn btn-small btn-mid" for="gen6">&Omega;R&alpha;S</label>
             <input class="gen btn-input" type="radio" name="gen" value="7" id="gen7" /><label class="btn btn-small btn-mid" for="gen7">USUM</label>
@@ -29,7 +29,10 @@ title: Battle Facilities Mass Calculator
         <!--"tier" isn't an ideal name, but it's descriptive enough, so I'm not against it-->
         <!--default checked tier is handled by honkalculate_controls's gen change function-->
         <span class="tiers" title="Select the sets." id="tiers">
-            <input class="btn-input" type="radio" name="tier" id="All"><label class="btn btn-left gen-specific g5 g6 g7 g80 g9" for="All">All sets</label><!--not in gen 8-->
+            <input class="btn-input" type="radio" name="tier" id="All"><label class="btn btn-left gen-specific g3 g4 g5 g6 g7 g80 g9" for="All">All sets</label><!--not in gen 8-->
+            <input class="btn-input" type="radio" name="tier" id="50"><label class="btn btn-mid gen-specific g3 g4" for="50">50+</label>
+            <input class="btn-input" type="radio" name="tier" id="Hall"><label class="btn btn-mid gen-specific g4" for="Hall">Hall</label>
+            <input class="btn-input" type="radio" name="tier" id="HallR10"><label class="btn btn-mid btn-fit gen-specific g4" for="HallR10">Rank 10 Hall</label>
             <input class="btn-input" type="radio" name="tier" id="28"><label class="btn btn-mid gen-specific g5" for="28">28+</label>
             <input class="btn-input" type="radio" name="tier" id="40"><label class="btn btn-mid gen-specific g6 g7" for="40">40+</label>
             <input class="btn-input" type="radio" name="tier" id="Tower"><label class="btn btn-mid gen-specific g8" for="Tower">Tower</label>
@@ -213,56 +216,52 @@ title: Battle Facilities Mass Calculator
                             <td class='ev-total'>&nbsp;</td>
                             <td></td>
                         </tr>
-                        <tr class="ac">
+                        <tr class="ac gen-specific g4 g5 g6 g7 g8 g80 g9">
                             <td><label>Accuracy</label></td>
                             <th></th>
                             <th>
                             <th></th>
                             </th>
                             <td>
-                                <td>
-                                    <select class="boost calc-trigger">
-                                        <option value="6">+6</option>
-                                        <option value="5">+5</option>
-                                        <option value="4">+4</option>
-                                        <option value="3">+3</option>
-                                        <option value="2">+2</option>
-                                        <option value="1">+1</option>
-                                        <option value="0" selected="selected">--</option>
-                                        <option value="-1">-1</option>
-                                        <option value="-2">-2</option>
-                                        <option value="-3">-3</option>
-                                        <option value="-4">-4</option>
-                                        <option value="-5">-5</option>
-                                        <option value="-6">-6</option>
-                                    </select>
-                                </td>
+                            <td><select class="boost calc-trigger">
+                                    <option value="6">+6</option>
+                                    <option value="5">+5</option>
+                                    <option value="4">+4</option>
+                                    <option value="3">+3</option>
+                                    <option value="2">+2</option>
+                                    <option value="1">+1</option>
+                                    <option value="0" selected="selected">--</option>
+                                    <option value="-1">-1</option>
+                                    <option value="-2">-2</option>
+                                    <option value="-3">-3</option>
+                                    <option value="-4">-4</option>
+                                    <option value="-5">-5</option>
+                                    <option value="-6">-6</option>
+                                </select></td>
                             </td>
                         </tr>
-                        <tr class="es">
+                        <tr class="es gen-specific g4 g5 g6 g7 g8 g80 g9">
                             <td><label title="This is only used for Stored Power/Power Trip/Punishment, evasion modifiers are not applied in calculations.">Evasion</label></td>
                             <th></th>
                             <th>
                             <th></th>
                             </th>
-                            <td class="gen-specific g4 g5 g6 g7 g8 g80 g9">
-                                <td>
-                                    <select class="boost calc-trigger">
-                                        <option value="6">+6</option>
-                                        <option value="5">+5</option>
-                                        <option value="4">+4</option>
-                                        <option value="3">+3</option>
-                                        <option value="2">+2</option>
-                                        <option value="1">+1</option>
-                                        <option value="0" selected="selected">--</option>
-                                        <option value="-1">-1</option>
-                                        <option value="-2">-2</option>
-                                        <option value="-3">-3</option>
-                                        <option value="-4">-4</option>
-                                        <option value="-5">-5</option>
-                                        <option value="-6">-6</option>
-                                    </select>
-                                </td>
+                            <td>
+                            <td><select class="boost calc-trigger">
+                                    <option value="6">+6</option>
+                                    <option value="5">+5</option>
+                                    <option value="4">+4</option>
+                                    <option value="3">+3</option>
+                                    <option value="2">+2</option>
+                                    <option value="1">+1</option>
+                                    <option value="0" selected="selected">--</option>
+                                    <option value="-1">-1</option>
+                                    <option value="-2">-2</option>
+                                    <option value="-3">-3</option>
+                                    <option value="-4">-4</option>
+                                    <option value="-5">-5</option>
+                                    <option value="-6">-6</option>
+                                </select></td>
                             </td>
                         </tr>
                     </table>
@@ -727,18 +726,18 @@ title: Battle Facilities Mass Calculator
 <script type="text/javascript" src="../_scripts/setdex_custom.js"></script>
 <script type="text/javascript" src="../_scripts/select2.min.js"></script>
 <script type="text/javascript" src="../_scripts/pokedex.js"></script>
+<script type="text/javascript" src="../_scripts/setdex_gen3_sets.js"></script>
+<script type="text/javascript" src="../_scripts/setdex_gen4_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen5_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen6_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen7_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen8_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen80_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_factory_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen5.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen6.js" id="XYScript"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen7.js" id="SMScript"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen8.js" id="SSScript"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen80.js" id="BDSPScript"></script>
-<script type="text/javascript" src="../_scripts/setdex_factory.js" id="BSSFScript"></script>
 <script type="text/javascript" src="../_scripts/stat_data.js"></script>
 <script type="text/javascript" src="../_scripts/type_data.js"></script>
 <script type="text/javascript" src="../_scripts/nature_data.js"></script>
@@ -746,7 +745,9 @@ title: Battle Facilities Mass Calculator
 <script type="text/javascript" src="../_scripts/item_data.js"></script>
 <script type="text/javascript" src="../_scripts/move_data.js"></script>
 <script type="text/javascript" src="../_scripts/shared_calc.js"></script>
-<script type="text/javascript" src="../_scripts/damage.js"></script>
+<script type="text/javascript" src="../_scripts/damage_modern.js"></script>
+<script type="text/javascript" src="../_scripts/damage_gen4.js"></script>
+<script type="text/javascript" src="../_scripts/damage_gen3.js"></script>
 <script type="text/javascript" src="../_scripts/ko_chance.js"></script>
 <script type="text/javascript" src="../_scripts/export.js"></script>
 <script type="text/javascript" src="../_scripts/honkalculate_calc.js"></script>
