--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Battle Facilities Calculator
 	<div>
         <span class="title-text">Battle Facilities Damage Calculator</span>
         <span class="generation-select" title="Select the format.">
-            <input class="gen btn-input" type="radio" name="gen" value="3" id="gen3" /><label class="btn btn-small btn-left" for="gen3">RSE</label>
-            <input class="gen btn-input" type="radio" name="gen" value="4" id="gen4" /><label class="btn btn-small btn-mid" for="gen4">Gen 4</label>
+            <input class="gen btn-input" type="radio" name="gen" value="3" id="gen3" /><label class="btn btn-small btn-left" for="gen3">Em</label>
+            <input class="gen btn-input" type="radio" name="gen" value="4" id="gen4" /><label class="btn btn-small btn-mid" for="gen4">PtHGSS</label>
             <input class="gen btn-input" type="radio" name="gen" value="5" id="gen5" /><label class="btn btn-small btn-mid" for="gen5">BW</label>
             <input class="gen btn-input" type="radio" name="gen" value="6" id="gen6" /><label class="btn btn-small btn-mid" for="gen6">&Omega;R&alpha;S</label>
             <input class="gen btn-input" type="radio" name="gen" value="7" id="gen7" /><label class="btn btn-small btn-mid" for="gen7">USUM</label>
@@ -215,7 +215,7 @@ title: Battle Facilities Calculator
 						<td class='ev-total'>&nbsp;</td>
 						<td></td>
 					</tr>
-					<tr class="ac">
+					<tr class="ac gen-specific g4 g5 g6 g7 g8 g80 g9">
 						<td><label>Accuracy</label></td>
 						<th></th>
 						<th>
@@ -239,13 +239,13 @@ title: Battle Facilities Calculator
 							</select></td>
 						</td>
 					</tr>
-					<tr class="es">
+					<tr class="es gen-specific g4 g5 g6 g7 g8 g80 g9">
 						<td><label title="This is only used for Stored Power/Power Trip/Punishment, evasion modifiers are not applied in calculations.">Evasion</label></td>
 						<th></th>
 						<th>
 						<th></th>
 						</th>
-						<td class="gen-specific g4 g5 g6 g7 g8 g80 g9">
+						<td>
 						<td><select class="boost calc-trigger">
 								<option value="6">+6</option>
 								<option value="5">+5</option>
@@ -458,7 +458,7 @@ title: Battle Facilities Calculator
 				<input class="btn-input calc-trigger" type="radio" name="format" value="Singles" id="singles" /><label class="btn btn-left" for="singles">Singles</label>
 				<input class="btn-input calc-trigger" type="radio" name="format" value="Doubles" id="doubles" checked="checked" /><label class="btn btn-right" for="doubles">Doubles</label>
 			</div>
-			<div style="width: 22.0em; margin: 5px auto;" title="Select the current terrain.">
+			<div class="gen-specific g6 g7 g8 g80 g9" style="width: 22.0em; margin: 5px auto;" title="Select the current terrain.">
 				<input class="btn-input terrain-trigger calc-trigger" type="radio" name="terrain" value="" id="noterrain" checked="checked" /><label class="btn btn-small btn-left" for="noterrain">None</label>
 				<input class="btn-input terrain-trigger calc-trigger" type="radio" name="terrain" value="Electric" id="electric" /><label class="btn btn-small btn-mid" for="electric">Electric</label>
 				<input class="btn-input terrain-trigger calc-trigger" type="radio" name="terrain" value="Grassy" id="grassy" /><label class="btn btn-small btn-mid" for="grassy">Grassy</label>
@@ -867,7 +867,7 @@ title: Battle Facilities Calculator
 						<td class='ev-total'>&nbsp;</td>
 						<td></td>
 					</tr>
-					<tr class="ac">
+					<tr class="ac gen-specific g4 g5 g6 g7 g8 g80 g9">
 						<td><label>Accuracy</label></td>
 						<th></th>
 						<th>
@@ -891,13 +891,13 @@ title: Battle Facilities Calculator
 							</select></td>
 						</td>
 					</tr>
-					<tr class="es">
+					<tr class="es gen-specific g4 g5 g6 g7 g8 g80 g9">
 						<td><label title="This is only used for Stored Power/Power Trip/Punishment, evasion modifiers are not applied in calculations.">Evasion</label></td>
 						<th></th>
 						<th>
 						<th></th>
 						</th>
-						<td class="gen-specific g4 g5 g6 g7 g8 g80 g9">
+						<td>
 						<td><select class="boost calc-trigger">
 								<option value="6">+6</option>
 								<option value="5">+5</option>
@@ -1091,18 +1091,18 @@ title: Battle Facilities Calculator
 
 <script type="text/javascript" src="../_scripts/select2.min.js"></script>
 <script type="text/javascript" src="../_scripts/pokedex.js"></script>
+<script type="text/javascript" src="../_scripts/setdex_gen3_sets.js"></script>
+<script type="text/javascript" src="../_scripts/setdex_gen4_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen5_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen6_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen7_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen8_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen80_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_factory_sets.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen5.js"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen6.js" id="XYScript"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen7.js" id="SMScript"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen8.js" id="SSScript"></script>
 <script type="text/javascript" src="../_scripts/setdex_gen80.js" id="BDSPScript"></script>
-<script type="text/javascript" src="../_scripts/setdex_factory.js" id="BSSFScript"></script>
 <script type="text/javascript" src="../_scripts/stat_data.js"></script>
 <script type="text/javascript" src="../_scripts/type_data.js"></script>
 <script type="text/javascript" src="../_scripts/nature_data.js"></script>
@@ -1111,6 +1111,8 @@ title: Battle Facilities Calculator
 <script type="text/javascript" src="../_scripts/move_data.js"></script>
 <script type="text/javascript" src="../_scripts/shared_calc.js"></script>
 <script type="text/javascript" src="../_scripts/ap_calc.js"></script>
-<script type="text/javascript" src="../_scripts/damage.js"></script>
+<script type="text/javascript" src="../_scripts/damage_modern.js"></script>
+<script type="text/javascript" src="../_scripts/damage_gen4.js"></script>
+<script type="text/javascript" src="../_scripts/damage_gen3.js"></script>
 <script type="text/javascript" src="../_scripts/ko_chance.js"></script>
 <script type="text/javascript" src="../_scripts/export.js"></script>
