--- a/honkalculate.html
+++ b/honkalculate.html
@@ -8,7 +8,7 @@ title: Battle Facilities Mass Calculator
         <span class="generation-select" title="Select the format.">
             <!-- Gen 5: GBU, Gen 6: ORAS, Gen 7: USUM, Gen 8: SwSh, Gen 80: BDSP, Gen 20: Gen 7 BSS Factory, Gen 21: Inverse, Gen 22: LGPE -->
             <input class="gen btn-input" type="radio" name="gen" value="3" id="gen3" /><label class="btn btn-small btn-left" for="gen3">Em</label>
-            <input class="gen btn-input" type="radio" name="gen" value="4" id="gen4" /><label class="btn btn btn-mid" for="gen4">PtHGSS</label>
+            <input class="gen btn-input" type="radio" name="gen" value="4" id="gen4" /><label class="btn btn-small btn-mid" for="gen4">PtHGSS</label>
             <input class="gen btn-input" type="radio" name="gen" value="5" id="gen5" /><label class="btn btn-small btn-mid" for="gen5">BW</label>
             <input class="gen btn-input" type="radio" name="gen" value="6" id="gen6" /><label class="btn btn-small btn-mid" for="gen6">&Omega;R&alpha;S</label>
             <input class="gen btn-input" type="radio" name="gen" value="7" id="gen7" /><label class="btn btn-small btn-mid" for="gen7">USUM</label>
@@ -441,10 +441,7 @@ title: Battle Facilities Mass Calculator
                     Field
                     <div id="autolevel">
                         Auto-Level to:
-                        <select id="autolevel-select">
-                            <option value="50" selected="selected">50</option>
-                            <option value="100">100</option>
-                        </select>
+                        <input class="autolevel" id="autolevel-select" style="width:2.25em" value=50 />
                     </div>
                 </h4>
             </div>
@@ -461,7 +458,7 @@ title: Battle Facilities Mass Calculator
                     <input class="btn-input terrain-trigger calc-trigger" type="radio" name="terrain" value="Psychic" id="psychic" /><label class="btn btn-small btn-right" for="psychic">Psychic</label>
                 </div>
                 <hr class="gen-specific g6 g7 g8 g80 g9" />
-                <div style="width: 22.2em; margin: 5px auto;" title="Select the current weather condition.">
+                <div style="width: 22.0em; margin: 5px auto;" title="Select the current weather condition.">
                     <input class="btn-input calc-trigger" type="radio" name="weather" value="" id="clear" checked="checked" /><label class="btn btn-small btn-left" for="clear">None</label>
                     <input class="btn-input calc-trigger" type="radio" name="weather" value="Sun" id="sun" /><label class="btn btn-small btn-mid" for="sun">Sun</label>
                     <input class="btn-input calc-trigger" type="radio" name="weather" value="Rain" id="rain" /><label class="btn btn-small btn-mid" for="rain">Rain</label>
@@ -484,7 +481,7 @@ title: Battle Facilities Mass Calculator
                 </div>
                 <hr/>
 
-                <div class="btn-group gen-specific g7 g8 g80">
+                <div class="btn-group gen-specific g7 g8">
                     <div class="left" title="Is this Pokemon protecting?">
                         <input class="btn-input calc-trigger" type="checkbox" id="protectL" /><label class="btn btn-xwide" for="protectL">Protect</label>
                     </div>
