--- a/index.html
+++ b/index.html
@@ -441,10 +441,7 @@ title: Battle Facilities Calculator
 				Field
 				<div id="autolevel">
 					Auto-Level to:
-					<select id="autolevel-select">
-						<option value="50" selected="selected">50</option>
-						<option value="100">100</option>
-					</select>
+					<input class="autolevel" id="autolevel-select" style="width:2.25em" value=50 />
 				</div>
 			</h4>
 		</div>
@@ -466,7 +463,7 @@ title: Battle Facilities Calculator
 				<input class="btn-input terrain-trigger calc-trigger" type="radio" name="terrain" value="Psychic" id="psychic" /><label class="btn btn-small btn-right" for="psychic">Psychic</label>
 			</div>
 			<hr class="gen-specific g6 g7 g8 g80 g9" />
-			<div style="width: 22.2em; margin: 5px auto;" title="Select the current weather condition.">
+			<div style="width: 22.0em; margin: 5px auto;" title="Select the current weather condition.">
 				<input class="btn-input calc-trigger" type="radio" name="weather" value="" id="clear" checked="checked" /><label class="btn btn-small btn-left" for="clear">None</label>
 				<input class="btn-input calc-trigger" type="radio" name="weather" value="Sun" id="sun" /><label class="btn btn-small btn-mid" for="sun">Sun</label>
 				<input class="btn-input calc-trigger" type="radio" name="weather" value="Rain" id="rain" /><label class="btn btn-small btn-mid" for="rain">Rain</label>
