--- a/index.html
+++ b/index.html
@@ -441,11 +441,7 @@ title: Battle Facilities Calculator
 				Field
 				<div id="autolevel">
 					Auto-Level to:
-					<select class="gen-specific g5 g6 g7 g8 g80 g9" id="autolevel-select">
- 						<option value="50" selected="selected">50</option>
- 						<option value="100">100</option>
- 					</select>
-					<input class="autolevel gen-specific g3 g4" id="autolevel-select" style="width:2.25em" value=50 />
+					<input id="autolevel-select" style="width:2.25em" value=50 />
 				</div>
 			</h4>
 		</div>
