--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ title: Battle Facilities Calculator
 				Field
 				<div id="autolevel">
 					Auto-Level to:
-					<input id="autolevel-select" style="width:2.25em" value=50 />
+					<input class="autolevel" id="autolevel-select" style="width:2.25em" value=50 />
 				</div>
 			</h4>
 		</div>
