--- a/honkalculate.html
+++ b/honkalculate.html
@@ -441,7 +441,11 @@ title: Battle Facilities Mass Calculator
                     Field
                     <div id="autolevel">
                         Auto-Level to:
-                        <input class="autolevel" id="autolevel-select" style="width:2.25em" value=50 />
+                        <input class="autolevel-box gen-specific g3 g4" id="autolevel-box" style="width:2.5em" value=50 />
+                        <span class="gen-specific g5 g6 g7 g8 g80 g9">
+                            <input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="50" id="autolevel50" checked="checked" /><label class="btn btn-left" style="width:2em;padding:2px 4px" for="autolevel50">50</label>
+                            <input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="100" id="autolevel100" /><label class="btn btn-right" style="width:2em;padding:2px 4px" for="autolevel100">100</label>
+                        </span>
                     </div>
                 </h4>
             </div>
