--- a/honkalculate.html
+++ b/honkalculate.html
@@ -22,8 +22,7 @@ title: Battle Facilities Mass Calculator
             <input class="mode btn-input" type="radio" name="mode" value="all-vs-one"  id="all-vs-one" /><label class="btn btn-small btn-right" for="all-vs-one">Allv1</label>
         </span>
     </div>
-    <hr />
-    <p>Based on the BSS calculator by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a> | Mass Calculator based on <a href="https://www.smogon.com/forums/members/honko.42413/">Honko</a>'s "Honkalculator"</p>
+    <hr/>
     <div>
         <span class="title-text">Mode: </span>
         <!--"tier" isn't an ideal name, but it's descriptive enough, so I'm not against it-->
@@ -450,7 +449,7 @@ title: Battle Facilities Mass Calculator
                 </h4>
             </div>
             <div class="panel-body">
-                <div style="width: 10.6em; margin: 0 auto 5px;" title="Select the battle format.">
+                <div style="width: 10.6em; margin: 0 auto 5px;" id="format" title="Select the battle format.">
                     <input class="btn-input calc-trigger" type="radio" name="format" value="Singles" id="singles" /><label class="btn btn-left" for="singles">Singles</label>
                     <input class="btn-input calc-trigger" type="radio" name="format" value="Doubles" id="doubles" checked="checked" /><label class="btn btn-right" for="doubles">Doubles</label>
                 </div>
