--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@ title: Battle Facilities Calculator
             <input class="mode btn-input" type="radio" name="mode" value="all-vs-one"  id="all-vs-one" /><label class="btn btn-small btn-right" for="all-vs-one">Allv1</label>
         </span>
     </div>
-	<hr />
-	<p>Based on the BSS calculator by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a></p>
+	<hr/>
 	<!-- <div class="banner"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 	<!-- Damage Calc Header -->
 	<!-- <ins class="adsbygoogle"
@@ -455,7 +454,7 @@ title: Battle Facilities Calculator
 					<img id="midimg" align="middle" src="../_images/tower.png" alt="cant say" height="50" width="50">
 				</a>
 			</div>
-			<div style="width: 10.6em; margin: 0 auto 5px;" title="Select the battle format.">
+			<div style="width: 10.6em; margin: 0 auto 5px;" id="format" title="Select the battle format.">
 				<input class="btn-input calc-trigger" type="radio" name="format" value="Singles" id="singles" /><label class="btn btn-left" for="singles">Singles</label>
 				<input class="btn-input calc-trigger" type="radio" name="format" value="Doubles" id="doubles" checked="checked" /><label class="btn btn-right" for="doubles">Doubles</label>
 			</div>
