--- a/honkalculate.html
+++ b/honkalculate.html
@@ -29,11 +29,9 @@ title: Battle Facilities Mass Calculator
         <!--default checked tier is handled by honkalculate_controls's gen change function-->
         <span class="tiers" title="Select the sets." id="tiers">
             <input class="btn-input" type="radio" name="tier" id="All"><label class="btn btn-left gen-specific g3 g4 g5 g6 g7 g80 g9" for="All">All sets</label><!--not in gen 8-->
-            <input class="btn-input" type="radio" name="tier" id="50"><label class="btn btn-mid gen-specific g3 g4" for="50">50+</label>
+            <input class="btn-input" type="radio" name="tier" id="threshold"><label class="btn btn-mid gen-specific g3 g4 g5 g6 g7" for="threshold">0+</label>
             <input class="btn-input" type="radio" name="tier" id="Hall"><label class="btn btn-mid gen-specific g4" for="Hall">Hall</label>
             <input class="btn-input" type="radio" name="tier" id="HallR10"><label class="btn btn-mid btn-fit gen-specific g4" for="HallR10">Rank 10 Hall</label>
-            <input class="btn-input" type="radio" name="tier" id="28"><label class="btn btn-mid gen-specific g5" for="28">28+</label>
-            <input class="btn-input" type="radio" name="tier" id="40"><label class="btn btn-mid gen-specific g6 g7" for="40">40+</label>
             <input class="btn-input" type="radio" name="tier" id="Tower"><label class="btn btn-mid gen-specific g8" for="Tower">Tower</label>
             <input class="btn-input" type="radio" name="tier" id="RS"><label class="btn btn-mid gen-specific g8" for="RS">RS</label>
             <input class="btn-input" type="radio" name="tier" id="SM"><label class="btn btn-mid btn-fit gen-specific g80" for="SM">Master Singles</label>
@@ -442,8 +440,8 @@ title: Battle Facilities Mass Calculator
                         Auto-Level to:
                         <input class="autolevel-box gen-specific g3 g4" id="autolevel-box" style="width:2.5em" value=50 />
                         <span class="gen-specific g5 g6 g7 g8 g80 g9">
-                            <input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="50" id="autolevel50" checked="checked" /><label class="btn btn-left" style="width:2em;padding:2px 4px" for="autolevel50">50</label>
-                            <input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="100" id="autolevel100" /><label class="btn btn-right" style="width:2em;padding:2px 4px" for="autolevel100">100</label>
+                            <input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="50" id="autolevel50" checked="checked" /><label class="btn btn-left format-btn" for="autolevel50">50</label>
+                            <input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="100" id="autolevel100" /><label class="btn btn-right format-btn" for="autolevel100">100</label>
                         </span>
                     </div>
                 </h4>
