--- a/index.html
+++ b/index.html
@@ -437,14 +437,19 @@ title: Battle Facilities Calculator
 	<div class="panel field-info"><!--Start Field panel-->
 		<div class="panel-heading">
 			<h4 class="panel-title">
-				Field
+				&nbsp;
 				<div id="autolevel">
-					Auto-Level to:
+					<span id="autolevel-title">Auto-Level to:</span>
 					<input class="autolevel-box gen-specific g3 g4" id="autolevel-box" style="width:2.5em" value=50 />
 					<span class="gen-specific g5 g6 g7 g8 g80 g9">
 						<input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="50" id="autolevel50" checked="checked" /><label class="btn btn-left format-btn" for="autolevel50">50</label>
 						<input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="100" id="autolevel100" /><label class="btn btn-right format-btn" for="autolevel100">100</label>
 					</span>
+				</div>
+				<div class="calc-trigger gen-specific g3 g4 g5 g6 g7" id="autoivs">
+					AI IVs:
+					<input class="autoivs-box gen-specific g4" id="autoivs-box" style="width:2.5em" value=31 />
+					<select class="gen-specific g3 g5 g6 g7" id="autoivs-select"></select>
 				</div>
 			</h4>
 		</div>
