implement prepending species abilities

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ title: Battle Facilities Calculator
 				<input class="btn-input calc-trigger" type="radio" name="weather" value="Hail" id="hail" /><label class="btn btn-small btn-right gen-specific g3 g4 g5 g6 g7 g8 g80" for="hail">Hail</label>
 				<input class="btn-input calc-trigger" type="radio" name="weather" value="Snow" id="snow" /><label class="btn btn-small btn-right gen-specific g9" for="snow">Snow</label>
 			</div>
-			<div class="gen-specific g6 g7 g8" style="width: 21.1em; margin: 5px auto;" title="Select the current weather condition.">
+			<div class="gen-specific g6 g7" style="width: 21.1em; margin: 5px auto;" title="Select the current weather condition.">
 				<input class="btn-input calc-trigger" type="radio" name="weather" value="Harsh Sun" id="harsh-sun" /><label class="btn btn-wide btn-left" for="harsh-sun">Harsh Sun</label>
 				<input class="btn-input calc-trigger" type="radio" name="weather" value="Heavy Rain" id="heavy-rain" /><label class="btn btn-wide btn-mid" for="heavy-rain">Heavy Rain</label>
 				<input class="btn-input calc-trigger" type="radio" name="weather" value="Strong Winds" id="strong-winds" /><label class="btn btn-xwide btn-right" for="strong-winds">Strong Winds</label>
