organize and clean project structure

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -726,27 +726,22 @@ title: Battle Facilities Mass Calculator
     var calc = exports = {};
     function require() { return exports; };
 </script>
-<script type="text/javascript" src="../_scripts/setdex_custom.js"></script>
+<script type="text/javascript" src="../_scripts/import_custom.js"></script>
 <script type="text/javascript" src="../_scripts/select2.min.js"></script>
-<script type="text/javascript" src="../_scripts/pokedex.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen3_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen4_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen5_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen6_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen7_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen8_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen80_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen5.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen6.js" id="XYScript"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen7.js" id="SMScript"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen8.js" id="SSScript"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen80.js" id="BDSPScript"></script>
-<script type="text/javascript" src="../_scripts/stat_data.js"></script>
-<script type="text/javascript" src="../_scripts/type_data.js"></script>
-<script type="text/javascript" src="../_scripts/nature_data.js"></script>
-<script type="text/javascript" src="../_scripts/ability_data.js"></script>
-<script type="text/javascript" src="../_scripts/item_data.js"></script>
-<script type="text/javascript" src="../_scripts/move_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/pokedex.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen3_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen4_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen5_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen6_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen7_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen8_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen80_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/stat_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/type_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/nature_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/ability_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/item_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/move_data.js"></script>
 <script type="text/javascript" src="../_scripts/shared_calc.js"></script>
 <script type="text/javascript" src="../_scripts/damage_modern.js"></script>
 <script type="text/javascript" src="../_scripts/damage_gen4.js"></script>
