--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@ title: Battle Facilities Calculator
 				<br>
 				<textarea rows="9" cols="40" id="customMon"></textarea>
 				<br>
-				<script type="text/javascript" src="../_scripts/setdex_custom.js"></script>
+				<script type="text/javascript" src="../_scripts/import_custom.js"></script>
 				<button type="button" onclick="savecustom()">Save</button> <button type="button" onclick="deletecustom()">Delete Custom Sets</button> <button id="migrate" type="button" onclick="migrateOldSets()">Migrate Old Sets</button>
 
 				<p>You may need to refresh the page after deleting your custom sets. If you encounter a bug, please try deleting your cookies or reporting it!</p>
@@ -1095,25 +1095,20 @@ title: Battle Facilities Calculator
 
 
 <script type="text/javascript" src="../_scripts/select2.min.js"></script>
-<script type="text/javascript" src="../_scripts/pokedex.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen3_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen4_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen5_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen6_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen7_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen8_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen80_sets.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen5.js"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen6.js" id="XYScript"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen7.js" id="SMScript"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen8.js" id="SSScript"></script>
-<script type="text/javascript" src="../_scripts/setdex_gen80.js" id="BDSPScript"></script>
-<script type="text/javascript" src="../_scripts/stat_data.js"></script>
-<script type="text/javascript" src="../_scripts/type_data.js"></script>
-<script type="text/javascript" src="../_scripts/nature_data.js"></script>
-<script type="text/javascript" src="../_scripts/ability_data.js"></script>
-<script type="text/javascript" src="../_scripts/item_data.js"></script>
-<script type="text/javascript" src="../_scripts/move_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/pokedex.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen3_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen4_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen5_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen6_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen7_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen8_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_gen80_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/stat_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/type_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/nature_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/ability_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/item_data.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/move_data.js"></script>
 <script type="text/javascript" src="../_scripts/shared_calc.js"></script>
 <script type="text/javascript" src="../_scripts/ap_calc.js"></script>
 <script type="text/javascript" src="../_scripts/damage_modern.js"></script>
