improve ko chance code

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@ title: Battle Facilities Calculator
 		</div>
 	</div>
 	<div class="main-result-group">
-		<div class="big-text" title="click to copy result"><span id="mainResult">Loading...</span></div>
+		<div class="big-text" title="Click to copy result">
+			<span id="mainResult">Loading...</span>
+			<span id="afterAcc"></span>
+		</div>
 		<div class="small-text"><span id="damageValues">(If you see this message for more than a few seconds, try enabling JavaScript. If you have that enabled, try deleting your cookies. Otherwise, I won't be able to help you unless you send a screenshot of your browser console.)</span></div>
 	</div>
 
