refactor mass table

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -676,15 +676,12 @@ title: Battle Facilities Mass Calculator
             <table class="hide display" id="holder-2">
                 <thead>
                     <tr>
-                        <th></th>
-                        <th>Best Move</th>
-                        <th>Damage (%)</th>
-                        <th>Damage (px)</th>
-                        <th>KO Chance</th>
-                        <th>Type 1</th>
-                        <th>Type 2</th>
-                        <th>Ability</th>
-                        <th>Item</th>
+                        <th></th> <!-- 0 Attacker/Defender -->
+                        <th>Best Move</th><!-- 1 -->
+                        <th>Damage (%)</th><!-- 2 -->
+                        <th>KO Chance</th><!-- 3 -->
+                        <th>Type 1</th><!-- 4 -->
+                        <th>Type 2</th><!-- 5 -->
                     </tr>
                 </thead>
             </table>
