add charge as field effect

--- a/index.html
+++ b/index.html
@@ -594,6 +594,14 @@ title: Battle Facilities Calculator
 					<input class="btn-input calc-trigger" type="checkbox" id="helpingHandR" /><label class="btn btn-xxwide" for="helpingHandR">Helping Hand</label>
 				</div>
 			</div>
+			<div class="btn-group">
+				<div class="left" title="Is this Pokemon affected by Charge, Electromorphosis, or Wind Power?">
+					<input class="btn-input calc-trigger" type="checkbox" id="chargeL" /><label class="btn btn-xxwide" for="chargeL">Charge</label>
+				</div>
+				<div class="right" title="Is this Pokemon affected by Charge, Electromorphosis, or Wind Power?">
+					<input class="btn-input calc-trigger" type="checkbox" id="chargeR" /><label class="btn btn-xxwide" for="chargeR">Charge</label>
+				</div>
+			</div>
 			<div class="btn-group gen-specific g5 g6 g7 g8 g80 g9">
 				<div class="left" title="Is this Pokemon protected by an ally's Friend Guard?">
 					<input class="btn-input calc-trigger" type="checkbox" id="friendGuardL" /><label class="btn btn-xxwide" for="friendGuardL">Friend Guard</label>
