--- a/honkalculate.html
+++ b/honkalculate.html
@@ -459,9 +459,9 @@ title: Battle Facilities Mass Calculator
                     <input class="btn-input calc-trigger" type="radio" name="weather" value="Strong Winds" id="strong-winds" /><label class="btn btn-xwide btn-right" for="strong-winds">Strong Winds</label>
                 </div>
                 <div class="gen-specific g6 g7 g8" style="width: 21.1em; margin: 5px auto;" title="Select the current radiating aura.">
-                    <input class="btn-input calc-trigger" type="checkbox" name="aura" value="Aura Break" id="aura-break" /><label class="btn btn-wide btn-left" for="aura-break">Aura Break</label>
-                    <input class="btn-input calc-trigger" type="checkbox" name="aura" value="Fairy Aura" id="fairy-aura" /><label class="btn btn-wide btn-mid" for="fairy-aura">Fairy Aura</label>
-                    <input class="btn-input calc-trigger" type="checkbox" name="aura" value="Dark Aura" id="dark-aura" /><label class="btn btn-wide btn-right" for="dark-aura">Dark Aura</label>
+                    <input class="btn-input calc-trigger" type="checkbox" name="aura" value="Fairy Aura" id="fairy-aura" /><label class="btn btn-wide btn-left" for="fairy-aura">Fairy Aura</label>
+                    <input class="btn-input calc-trigger" type="checkbox" name="aura" value="Dark Aura" id="dark-aura" /><label class="btn btn-wide btn-mid" for="dark-aura">Dark Aura</label>
+                    <input class="btn-input calc-trigger" type="checkbox" name="aura" value="Aura Break" id="aura-break" /><label class="btn btn-wide btn-right" for="aura-break">Aura Break</label>
                 </div>
                 <div class="gen-specific g4 g5 g6 g7 g8 g80 g9" style="width: 5.3em; margin: 5px auto;" title="Is gravity in effect?">
                     <input class="btn-input calc-trigger" type="checkbox" id="gravity" /><label class="btn" for="gravity">Gravity</label>
