add +2 button for commander

--- a/index.html
+++ b/index.html
@@ -620,10 +620,10 @@ title: Battle Facilities Calculator
 			</div>
 			<div class="btn-group gen-specific g7">
 				<div class="left" title="Has this Pokemon used Z-Conversion or Clangorous Soulblaze?">
-					<input class="btn-input calc-trigger" type="checkbox" id="clangL" /><label class="btn btn-xwide" for="clangL"><img src="../_images/PZ.png"><img src="../_images/kommo.png"><br>+1 All</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="clangL" /><label class="btn btn-xxwide" for="clangL"><img src="../_images/PZ.png"><img src="../_images/kommo.png"><br>+1 All</label>
 				</div>
 				<div class="right" title="Has this Pokemon used Z-Conversion or Clangorous Soulblaze?">
-					<input class="btn-input calc-trigger" type="checkbox" id="clangR" /><label class="btn btn-xwide" for="clangR"><img src="../_images/PZ.png"><img src="../_images/kommo.png"><br>+1 All</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="clangR" /><label class="btn btn-xxwide" for="clangR"><img src="../_images/PZ.png"><img src="../_images/kommo.png"><br>+1 All</label>
 				</div>
 			</div>
             <div class="btn-group gen-specific g8 g9">
@@ -640,6 +640,14 @@ title: Battle Facilities Calculator
 				</div>
 				<div class="right" title="Has this Pokemon had its Weakness Policy activated?">
 					<input class="btn-input calc-trigger" type="checkbox" id="wpR" /><label class="btn btn-xxwide" for="wpR"><img src="../_images/wp.png"><br>Weakness Policy</label>
+				</div>
+			</div>
+			<div class="btn-group gen-specific g7 g9">
+				<div class="left" title="Has this Pokemon had all its stats sharply raised? (gen 9 sprites by @ezerart_/Ezerart)">
+					<input class="btn-input calc-trigger" type="checkbox" id="evoL" /><label class="btn btn-xxwide" for="evoL"><img class="evo_img1" src="../_images/eevee.png"><img class="evo_img2" src="../_images/eevium.png"><br>+2 All</label>
+				</div>
+				<div class="right" title="Has this Pokemon had all its stats sharply raised? (gen 9 sprites by @ezerart_/Ezerart)">
+					<input class="btn-input calc-trigger" type="checkbox" id="evoR" /><label class="btn btn-xxwide" for="evoR"><img class="evo_img1" src="../_images/eevee.png"><img class="evo_img2" src="../_images/eevium.png"><br>+2 All</label>
 				</div>
 			</div>
 			<div class="btn-group gen-specific g8 g9">
@@ -674,14 +682,6 @@ title: Battle Facilities Calculator
                     <label for="faintedR">Party Fainted</label>
 				</div>
 				<div>&nbsp;</div>
-			</div>
-			<div class="btn-group gen-specific g7">
-				<div class="left" title="Has this Pokemon used Extreme Evoboost?">
-					<input class="btn-input calc-trigger" type="checkbox" id="evoL" /><label class="btn btn-xwide" for="evoL"><img src="../_images/eevee.png"><br>Extreme Evoboost</label>
-				</div>
-				<div class="right" title="Has this Pokemon used Extreme Evoboost?">
-					<input class="btn-input calc-trigger" type="checkbox" id="evoR" /><label class="btn btn-xwide" for="evoR"><img src="../_images/eevee.png"><br>Extreme Evoboost</label>
-				</div>
 			</div>
 			<div>&nbsp;</div>
 			<div class="btn-group">
