add individual iv boxes

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -425,7 +425,7 @@ title: Battle Facilities Mass Calculator
                             <input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="100" id="autolevel100" /><label class="btn btn-right format-btn" for="autolevel100">100</label>
                         </span>
                     </div>
-                    <div class="calc-trigger gen-specific g3 g4 g5 g6 g7" id="autoivs">
+                    <div class="autoivs calc-trigger gen-specific g5 g6 g7" id="autoivs-center">
                         AI IVs:
                         <input class="autoivs-box gen-specific g4" id="autoivs-box" style="width:2.5em" value=31 />
                         <select class="gen-specific g3 g5 g6 g7" id="autoivs-select"></select>
