update and refactor autoivs

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: Battle Facilities Calculator
 			<span id="mainResult" title="Click to copy result">Loading...</span>
 			<span id="afterAcc"></span>
 		</div>
-		<div class="small-text"><span id="damageValues">(If you see this message for more than a few seconds, try enabling JavaScript. If you have that enabled, try deleting your cookies. Otherwise, I won't be able to help you unless you send a screenshot of your browser console.)</span></div>
+		<div class="small-text"><span id="damageValues">(If you see this message for more than a few seconds, try enabling JavaScript. If you have that enabled, please send a screenshot of your browser console.)</span></div>
 	</div>
 
 	<div class="panel poke-info" id="p1">
@@ -707,7 +707,7 @@ title: Battle Facilities Calculator
 					<input class="right gen-specific g8 g9" type="checkbox" id="startGimmick"><label class="right gen-specific g8 g9" for="startGimmick" id="startGimmick-label">Start</label>
 				</div>
 
-				<p>You may need to refresh the page after deleting your custom sets. If you encounter a bug, please try deleting your cookies or reporting it!</p>
+				<p>You may need to refresh the page after deleting your custom sets. If you encounter a bug, please report it!</p>
 			</span>
 		</div>
 	</div><!--End Field panel-->
