--- a/honkalculate.html
+++ b/honkalculate.html
@@ -44,7 +44,13 @@ title: Battle Facilities Mass Calculator
     <div class="panel-group"><!--Container for left panels-->
         <div class="panel poke-info" id="p1"><!--Start Pokemon panel-->
             <div class="panel-heading">
-                <h4 class="panel-title">Pokémon</h4>
+                <h4 class="panel-title">Pokémon
+                    <div class="autoivs calc-trigger gen-specific g3 g4" id="autoivsL">
+                        IVs:
+                        <input class="autoivs-box gen-specific g4" id="autoivs-box" style="width:2.5em" value=31 />
+                        <select class="autoivs-select gen-specific g3" id="autoivs-select"></select>
+                    </div>
+                </h4>
             </div>
             <div class="panel-body">
                 <input type="text" class="set-selector calc-trigger" />
@@ -425,10 +431,10 @@ title: Battle Facilities Mass Calculator
                             <input class="btn-input calc-trigger" type="radio" name="autolevel-btn" value="100" id="autolevel100" /><label class="btn btn-right format-btn" for="autolevel100">100</label>
                         </span>
                     </div>
-                    <div class="autoivs calc-trigger gen-specific g5 g6 g7" id="autoivs-center">
+                    <div class="autoivs calc-trigger gen-specific g3 g4 g5 g6 g7" id="autoivs-center">
                         AI IVs:
                         <input class="autoivs-box gen-specific g4" id="autoivs-box" style="width:2.5em" value=31 />
-                        <select class="gen-specific g3 g5 g6 g7" id="autoivs-select"></select>
+                        <select class="autoivs-select gen-specific g3 g5 g6 g7" id="autoivs-select"></select>
                     </div>
                 </h4>
             </div>
