new server logo

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ title: Battle Facilities Calculator
 		<div class="panel-body">
 			<div style="width: 3.0em; margin: 0 auto 5px;">
 				<a href="https://www.smogon.com/forums/threads/8th-generation-battle-tower-restricted-sparring-discussion-records.3656190/">
-					<img id="midimg" align="middle" src="../_images/tower.png" alt="cant say" height="50" width="50">
+					<img id="midimg" align="middle" src="../_images/newlogo-350px.png" alt="cant say" height="50" width="50">
 				</a>
 			</div>
 			<div style="width: 10.6em; margin: 0 auto 5px;" id="format" title="Select the battle format.">
