add intimidate checkbox

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -303,6 +303,7 @@ title: Battle Facilities Mass Calculator
                     <div>
                         <label>Ability</label>
                         <select class="ability terrain-trigger calc-trigger"></select>
+                        <input class="isActivated hide" type="checkbox" title="Is this ability currently applying?"></label>
                     </div>
                     <div>
                         <label>Item</label>
