--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@ title: Battle Facilities Calculator
 				<div>
 					<label>Ability</label>
 					<select class="ability terrain-trigger calc-trigger"></select>
+					<input class="isActivated hide" type="checkbox" title="Is this ability currently applying?"></label>
 				</div>
 				<div>
 					<label>Item</label>
@@ -963,6 +964,7 @@ title: Battle Facilities Calculator
 				<div>
 					<label>Ability</label>
 					<select class="ability terrain-trigger calc-trigger"></select>
+					<input class="isActivated hide" type="checkbox" title="Is this ability currently applying?"></label>
 				</div>
 				<div>
 					<label>Item</label>
