--- a/index.html
+++ b/index.html
@@ -1094,6 +1094,7 @@ title: Battle Facilities Calculator
 <script type="text/javascript" src="../_scripts/game_data/setdex_gen7_sets.js"></script>
 <script type="text/javascript" src="../_scripts/game_data/setdex_gen8_sets.js"></script>
 <script type="text/javascript" src="../_scripts/game_data/setdex_gen80_sets.js"></script>
+<script type="text/javascript" src="../_scripts/game_data/setdex_eisenberry_sets.js"></script>
 <script type="text/javascript" src="../_scripts/game_data/stat_data.js"></script>
 <script type="text/javascript" src="../_scripts/game_data/type_data.js"></script>
 <script type="text/javascript" src="../_scripts/game_data/nature_data.js"></script>
